--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -13,3 +13,11 @@
     <input type="text" name="name">
     <button type="submit">Submit</button>
 </form>
+
+<form action="/multi-field-search" method="post">
+    <label for="name">Name:</label>
+    <input type="text" name="name">
+    <label for="description">Description:</label>
+    <input type="text" name="description">
+    <button type="submit">Search</button>
+</form>
